app/app.global.css
@import 'assets/loading.css';
@import 'assets/scrollbars.css';
@import 'assets/minireset.css';
@import 'assets/fonts/roboto/index.css';
@import '~rc-table/assets/index.css';
@import 'assets/rc-table.css';
@import '~leaflet/dist/leaflet.css';
@import '~react-image-gallery/styles/css/image-gallery.css';

/* Needed to disable border on focused HotKey element */
div[tabindex='-1']:focus {
  outline: 0;
}

.tagspaces-main-color {
  color: #1dd19f;
}

html,
body {
  overscroll-behavior-x: none;
}

.react-split > .split-container.vertical > .splitter {
  z-index: 1;
}

